@@ -41,15 +41,47 @@
 
                     <compilerArgs>
                         <arg>--module-source-path=./*/src/main/java;./*/src/test/java/;</arg>
-                        <arg>--source-path=/G/projets/wires/wires/wires/apimod/src/main/java;/G/projets/wires/wires/wires/apimod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/main/java;</arg>
+                        <arg>
+                            --source-path=/G/projets/wires/wires/wires/apimod/src/main/java;/G/projets/wires/wires/wires/apimod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/main/java;
+                        </arg>
                         <arg>-Xlint:all</arg>
-                        <arg>--patch-module=clientmod=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT.jar;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT-tests.jar;</arg>
+                        <arg>
+                            --patch-module=clientmod=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT.jar;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT-tests.jar;
+                        </arg>
                         <arg>--add-reads=apimod=ALL-UNNAMED</arg>
                         <arg>--add-reads=clientmod=ALL-UNNAMED</arg>
                         <arg>--add-exports=apimod/api=ALL-UNNAMED</arg>
                         <arg>--add-exports=clientmod/client=ALL-UNNAMED</arg>
                         <arg>--add-modules=apimod</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-failsafe-surefire-plugin.version}</version>
+                <configuration>
+                    <!--<childDelegation>false</childDelegation>-->
+                    <!--<forkMode>never</forkMode>-->
+
+                    <forkCount>0</forkCount>
+                    <!--<classpathDependencyScopeExclude>test</classpathDependencyScopeExclude>-->
+                    <argLine>
+                        --module clientmod
+                        --add-modules junit
+                        --class-path C:\Users\User\.m2\repository\junit\junit\4.12\junit-4.12.jar
+                        --module-path G:\projets\wires\wires\wires\clientmod\target\test-classes
+                        --add-reads clientmod=junit
+                        --add-opens clientmod/client=junit
+                    </argLine>
+                    <!--<classesDirectory>path/to/none</classesDirectory>-->
+
+                    <!-- Prevents target/classes to be added to the classpath -->
+                    <!-- Doing the same for test classes failed as it caused no tests to be found; it still works,
+                          I assume the patch-module above takes precedence over their occurrence on the classpath -->
+                    <!-- <testClassesDirectory>path/to/none</testClassesDirectory> -->
                 </configuration>
             </plugin>
         </plugins>
